# cline-cutter

./: .JuliaFormatter.toml  .gitignore  .pre-commit-config.yaml  Dockerfile  Manifest.toml  Project.toml  README.md  main.nf  nextflow.config  pyproject.toml
config/: Dockerfile  beartooth.config  startup.jl
resources/: barcodes.txt  rad_samplesheet.csv  samplesheet.csv  samplesheet.xlsx
